Fix ref links covered by navbar. (#1273)
* Fix ref links covered by navbar.

Closes #1232.

--- a/css/src/base.less
+++ b/css/src/base.less
@@ -433,16 +433,7 @@ footer {
   }
 }
 
-.footnoteRef {
-  sup {
-    margin-top: (-(@navbar-height + 10px));
-    padding-top: (@navbar-height + 10px);
-  }
-}
-
-.footnotes {
-  li {
-    margin-top: (-(@navbar-height + 10px));
-    padding-top: (@navbar-height + 10px);
-  }
+.footnoteRef sup, .footnote-ref, .math.display, .footnotes li {
+  margin-top: (-(@navbar-height + 10px));
+  padding-top: (@navbar-height + 10px);
 }
